diesel_compile_tests/tests/fail/cannot_load_default_select_with_group_by.stderr
error[E0271]: type mismatch resolving `<name as IsContainedInGroupBy<id>>::Output == Yes`
    --> tests/fail/cannot_load_default_select_with_group_by.rs:16:32
     |
  LL |         .load::<(i32, String)>(&mut conn);
     |          ----                  ^^^^^^^^^ type mismatch resolving `<name as IsContainedInGroupBy<id>>::Output == Yes`
     |          |
     |          required by a bound introduced by this call
     |
note: expected this to be `diesel::expression::is_contained_in_group_by::Yes`
    --> tests/fail/cannot_load_default_select_with_group_by.rs:5:1
     |
   LL | / table! {
   LL | |     users {
   LL | |         id -> Integer,
   LL | |         name -> Text,
   LL | |     }
  LL | | }
     | |_^
note: required for `columns::id` to implement `ValidGrouping<columns::name>`
    --> tests/fail/cannot_load_default_select_with_group_by.rs:7:9
     |
   LL |         id -> Integer,
     |         ^^
     = note: associated types for the current `impl` cannot be restricted in `where` clauses
     = note: 1 redundant requirement hidden
     = note: required for `(columns::id, columns::name)` to implement `ValidGrouping<columns::name>`
     = note: required for `SelectStatement<..., ..., ..., ..., ..., ..., ...>` to implement `Query`
     = note: required for `SelectStatement<..., ..., ..., ..., ..., ..., ...>` to implement `LoadQuery<'_, _, (i32, std::string::String)>`
note: required by a bound in `diesel::RunQueryDsl::load`
    --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
     |
LL |     fn load<'query, U>(self, conn: &mut Conn) -> QueryResult<Vec<U>>
     |        ---- required by a bound in this associated function
LL |     where
LL |         Self: LoadQuery<'query, Conn, U>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::load`
  
          = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)
For more information about this error, try `rustc --explain E0271`.
